- fix header height when not expanded - fix scoreboard alignment

--- a/src/components/UserListElement.scss
+++ b/src/components/UserListElement.scss
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: space-between;
 
-  width: 200px;
 
   .highlight {
     color: $highlight_color;
@@ -14,6 +13,10 @@
     font-size: smaller;
     font-style: italic;
   }
+}
+
+.UserListElement_score {
+  padding-left: 2em;
 }
 
 
